@@ -1,7 +1,7 @@
 ;;; action-lock.el --- invoke magic action by RET key on spell strings
 
 ;; Copyright (C) 2002, 2003, 2004, 2005-2022
-;;   HIRAOKA Kazuyuki <khi@users.osdn.me>
+;;   HIRAOKA Kazuyuki <kakkokakko@gmail.com>
 ;;
 ;; This program is free software; you can redistribute it and/or modify
 ;; it under the terms of the GNU General Public License as published by
