@@ -1,7 +1,7 @@
 ;;; honest-report.el --- make bug report with screenshot and keylog
 
 ;; Copyright (C) 2005-2022
-;;   HIRAOKA Kazuyuki <khi@users.osdn.me>
+;;   HIRAOKA Kazuyuki <kakkokakko@gmail.com>
 ;;
 ;; This program is free software; you can redistribute it and/or modify
 ;; it under the terms of the GNU General Public License as published by
