@@ -1,6 +1,6 @@
 ;;; howm-date.el --- Wiki-like note-taking tool
 ;;; Copyright (C) 2002, 2003, 2004, 2005-2022
-;;;   HIRAOKA Kazuyuki <khi@users.osdn.me>
+;;;   HIRAOKA Kazuyuki <kakkokakko@gmail.com>
 ;;;
 ;;; This program is free software; you can redistribute it and/or modify
 ;;; it under the terms of the GNU General Public License as published by
