@@ -1,6 +1,6 @@
 ;;; howm-lang-fr.el --- Wiki-like note-taking tool
 ;;; Copyright (C) 2005-2022
-;;;   HIRAOKA Kazuyuki <khi@users.osdn.me>
+;;;   HIRAOKA Kazuyuki <kakkokakko@gmail.com>
 ;;;
 ;;; French translation by french-speaking howm users
 ;;;
