@@ -1,6 +1,6 @@
 ;;; illusion.el --- load, edit, and submit something which is not pure file
 ;;; Copyright (C) 2005-2022
-;;;   HIRAOKA Kazuyuki <khi@users.osdn.me>
+;;;   HIRAOKA Kazuyuki <kakkokakko@gmail.com>
 ;;;
 ;;; This program is free software; you can redistribute it and/or modify
 ;;; it under the terms of the GNU General Public License as published by
