@@ -1,6 +1,6 @@
 ;;; riffle.el --- template of list browser with immediate preview
 ;;; Copyright (C) 2004, 2005-2022
-;;;   HIRAOKA Kazuyuki <khi@users.osdn.me>
+;;;   HIRAOKA Kazuyuki <kakkokakko@gmail.com>
 ;;;
 ;;; This program is free software; you can redistribute it and/or modify
 ;;; it under the terms of the GNU General Public License as published by
