@@ -1,3 +1,7 @@
+2023-07-30  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>
+
+	* howm.el.in: update author email
+
 2023-07-30  HIRAOKA Kazuyuki  <khi@users.osdn.me>
 
 	* README.md: add link to Russian manual
